<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VueGenerale">

    <EditText
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/hint_login"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spSalle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lbl_login"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="user_login" />

    <TextView
        android:id="@+id/lbl_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/lbl_login"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvLogin"
        app:layout_constraintEnd_toStartOf="@+id/tvLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spSalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        app:layout_constraintBottom_toTopOf="@+id/tvGit"
        app:layout_constraintEnd_toStartOf="@+id/spPoste"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <Spinner
        android:id="@+id/spPoste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/spSalle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spSalle" />

    <!-- TODO Q10 -->
    <TextView
        android:id="@+id/lbl_git"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/lbl_git"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvGit"
        app:layout_constraintEnd_toStartOf="@+id/tvGit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- TODO Q10 -->
    <EditText
        android:id="@+id/tvGit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textUri"
        android:text="@string/url_base"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvNextQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lbl_git"
        app:layout_constraintTop_toBottomOf="@+id/spSalle" />

    <!-- TODO: Q9 -->
    <TextView
        android:id="@+id/tvNextQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnToListe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnToListe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>